Kubernetes/Paperless-ngx/yamls/paperless-ngx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    name: paperless-ngx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  labels:
    app: paperless-ngx
    app.kubernetes.io/name: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
        app.kubernetes.io/name: paperless-ngx
    spec:
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
          - mountPath: /usr/src/paperless/data
            name: paperless-ngx-data
          - mountPath: /usr/src/paperless/media
            name: paperless-ngx-media
          - mountPath: /usr/src/paperless/export
            name: paperless-ngx-export
          - mountPath: /usr/src/paperless/consume
            name: paperless-ngx-consume
      volumes:
      - name: paperless-ngx-data
        persistentVolumeClaim:
          claimName: paperless-ngx-data
      - name: paperless-ngx-media
        persistentVolumeClaim:
          claimName: paperless-media-data
      - name: paperless-ngx-export
        persistentVolumeClaim:
          claimName: paperless-export-data
      - name: paperless-ngx-consume
        persistentVolumeClaim:
          claimName: paperless-ngx-consume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
  namespace: paperless-ngx
  labels:
    app: paperless-gotenberg
    app.kubernetes.io/name: paperless-gotenberg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-gotenberg
  template:
    metadata:
      labels:
        app: paperless-gotenberg
        app.kubernetes.io/name: paperless-gotenberg
    spec:
      containers:
        - name: paperless-gotenberg
          image: docker.io/gotenberg/gotenberg:8.19
          ports:
            - containerPort: 3000
              name: http
          command: ["gotenberg --chromium-disable-javascript=true --chromium-allow-list=file:///tmp/.*"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika
  namespace: paperless-ngx
  labels:
    app: paperless-tika
    app.kubernetes.io/name: paperless-tika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-tika
  template:
    metadata:
      labels:
        app: paperless-tika
        app.kubernetes.io/name: paperless-tika
    spec:
      containers:
        - name: paperless-tika
          image: docker.io/apache/tika:latest
          ports:
            - containerPort: 9998
              name: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-ngx
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app: paperless-ngx
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-gotenberg
  name: paperless-gotenberg
  namespace: paperless-ngx
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: paperless-gotenberg
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-tika
  name: paperless-tika
  namespace: paperless-ngx
spec:
  ports:
  - name: http
    port: 9998
    protocol: TCP
    targetPort: http
  selector:
    app: paperless-tika
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-paperless-ngx-https-redirect
  namespace: paperless-ngx
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-paperless-ngx-security
  namespace: paperless-ngx
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-paperless-ngx-websecure
  namespace: paperless-ngx 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless-ngx.domain.com`)
      services:
        - name: paperless-ngx
          port: 8000
          serversTransport: traefik-paperless-ngx-transport
      middlewares:
        - name: traefik-paperless-ngx-security
  tls:
    secretName: paperless-ngx-domain-com
    options:
      name: traefik-paperless-ngx-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-paperless-ngx-web
  namespace: paperless-ngx
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`paperless-ngx.domain.com`)
      services:
        - name: paperless-ngx
          port: 8000
      middlewares:
        - name: traefik-paperless-ngx-https-redirect
